Project 1 for basic HTML add map

--- a/P1/index.html
+++ b/P1/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adare Restaurant</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -21,15 +23,22 @@
         </nav>
         <main>
             <h1>let's meat</h1>
-            <p>We love sharing good food with great people. We bring over 30 years 
-               industry experience and passion to <a href="#">Adare. </a>With a dishes that are
-               carefully designed to bring you a truly satisfying Irish food 
-               erience that you are sure to remember.</p>
-            <a href="#" target="_blank">MAKE Reservation</a>
+            <p>We love sharing good food with great people. We bring over 30 years
+                industry experience and passion to <a href="#">Adare. </a>With a dishes that are
+                carefully designed to bring you a truly satisfying Irish food
+                erience that you are sure to remember.</p>
+            <a href="mailto:samesame.cha@gmail.com?Subject=Reservation">MAKE Reservation</a>
         </main>
+        <map>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d731.5170880219089!2d139.8415925305756!3d35.70589234491045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601888ba92b002bd%3A0xfe907577e732edf1!2sPopolamama!5e0!3m2!1sen!2sjp!4v1584600431162!5m2!1sen!2sjp"
+                width="1024" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                tabindex="0"></iframe>
+        </map>
         <footer>
             <p>Main St, Blabkkky, Adare, Co. Limeick - Copyright 2017</p>
         </footer>
     </div>
 </body>
+
 </html>
